HelloUltraviolet/Fixtures/RejectedSource/Procedures/MainDiagnosticReferences/Expected.uv
//! Expected diagnostic metadata for the MainDiagnosticReferences rejected-source specimen.

expectedDiagnostic("E-MOD-2434", "def.15.MainDiagRefs")
